--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ var name;
 var connectedUser;
  
 //connecting to our signaling server 
-var conn = new WebSocket('ws://localhost:9090');
+var conn = new WebSocket('ws://https://young-depths-92168.herokuapp.com:9090');
  
 conn.onopen = function () { 
    console.log("Connected to the signaling server"); 
