first saddsajd hsadjffj

--- a/index.html
+++ b/index.html
@@ -70,9 +70,7 @@
          </div>
 			
       </div> 
-	
-    <script type="text/javascript" src="cordova.js"></script>
-    <script type="text/javascript" src="js/index.js"></script>
+		
 	<script type="text/javascript">
 //our username 
 var name; 
@@ -162,7 +160,6 @@ loginBtn.addEventListener("click", function (event) {
 });
  
 function handleLogin(success) { 
-	console.log("sukses hendle");
    if (success === false) { 
       alert("Ooops...try a different username"); 
    } else { 
@@ -172,12 +169,11 @@ function handleLogin(success) {
       //********************** 
       //Starting a peer connection 
       //********************** 
-navigator.getUserMedia = navigator.getUserMedia ||
-    navigator.webkitGetUserMedia || navigator.mozGetUserMedia;		
+		
       //getting local audio stream 
-      navigator.getUserMedia({ video: false, audio: true }, function (myStream) { 
+      navigator.webkitGetUserMedia({ video: false, audio: true }, function (myStream) { 
          stream = myStream; 
-			console.log("media stream jalan");
+			
          //displaying local audio stream on the page 
          localAudio.src = window.URL.createObjectURL(stream);
 			
@@ -186,7 +182,7 @@ navigator.getUserMedia = navigator.getUserMedia ||
             "iceServers": [{ "url": "stun:stun2.1.google.com:19302" }] 
          }; 
 			
-         yourConn = new RTCPeerConnection(configuration); 
+         yourConn = new webkitRTCPeerConnection(configuration); 
 			
          // setup stream listening 
          yourConn.addStream(stream); 
@@ -216,17 +212,12 @@ navigator.getUserMedia = navigator.getUserMedia ||
 //initiating a call 
 callBtn.addEventListener("click", function () { 
    var callToUsername = callToUsernameInput.value; 
-   console.log("media clik request jalan");
-   console.log(callToUsername);
 	
    if (callToUsername.length > 0) { 
       connectedUser = callToUsername; 
-	  
-
 		
       // create an offer 
       yourConn.createOffer(function (offer) { 
-	  console.log("jalankan offer");
          send({
             type: "offer", 
             offer: offer 
@@ -241,8 +232,6 @@ callBtn.addEventListener("click", function () {
  
 //when somebody sends us an offer 
 function handleOffer(offer, name) { 
-
-console.log("handle offer");
    connectedUser = name; 
    yourConn.setRemoteDescription(new RTCSessionDescription(offer)); 
 	
@@ -263,7 +252,6 @@ console.log("handle offer");
  
 //when we got an answer from a remote user 
 function handleAnswer(answer) { 
-console.log("handle answer");
    yourConn.setRemoteDescription(new RTCSessionDescription(answer)); 
 };
  
@@ -274,7 +262,6 @@ function handleCandidate(candidate) {
  
 //hang up
 hangUpBtn.addEventListener("click", function () { 
-	console.log("close button");
    send({ 
       type: "leave" 
    }); 
