first sa cxzjzchxzccnxncxn zxnxzcc

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ var name;
 var connectedUser;
  
 //connecting to our signaling server 
-var conn = new WebSocket('ws://protected-inlet-70820.herokuapp.com:9090');
+var conn = new WebSocket('ws://https://protected-inlet-70820.herokuapp.com:9090');
  
 conn.onopen = function () { 
    console.log("Connected to the signaling server"); 
