--- a/index.html
+++ b/index.html
@@ -75,9 +75,10 @@
 //our username 
 var name; 
 var connectedUser;
- 
+var host_;
+host_=window.location.hostname; 
 //connecting to our signaling server 
-var conn = new WebSocket('ws://protected-inlet-70820.herokuapp.com:9090');
+var conn = new WebSocket('ws://'+host_+':9090');
  
 conn.onopen = function () { 
    console.log("Connected to the signaling server"); 
