first sa cxzjzchxzccnxncxn zxnxzsdhsdhjjjjgggttsdad ssdsa

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@ var name;
 var connectedUser;
 var host_;
 host_=window.location.hostname; 
+console.log(host_);
 //connecting to our signaling server 
 var conn = new WebSocket('ws://'+host_+':9090');
  
